RF | _Pipeline > testPipelineCheckDiscardOld30builds and dependent testPipelineCheckDiscardOld3builds (#1273)