@@ -1,6 +1,5 @@
 import model.HomePage;
 import model.PipelineConfigPage;
-import model.ProjectPage;
 import org.openqa.selenium.By;
 import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.WebElement;
@@ -10,7 +9,6 @@ import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Ignore;
 import org.testng.annotations.Test;
-import org.testng.asserts.SoftAssert;
 import runner.BaseTest;
 import runner.ProjectUtils;
 import runner.TestUtils;
@@ -34,12 +32,10 @@ public class _PipelineTest extends BaseTest {
     private static final String PIPELINE_NAME = TestUtils.getRandomStr(7);
     private final String namePipeline = pipelineName();
     private JavascriptExecutor javascriptExecutor;
-    private SoftAssert asserts;
 
     @BeforeMethod
     public void setUp() {
         javascriptExecutor = (JavascriptExecutor) getDriver();
-        asserts = new SoftAssert();
         getActions();
     }
 
@@ -374,7 +370,7 @@ public class _PipelineTest extends BaseTest {
     @Test
     public void testCreatePipelineWithNegativeValueQuietPeriod() {
 
-        String checkForValueErrorMessage = new HomePage(getDriver())
+        final String checkForValueErrorMessage = new HomePage(getDriver())
                 .clickNewItem()
                 .setProjectName(pipelineName())
                 .setProjectTypePipeline()
@@ -432,7 +428,7 @@ public class _PipelineTest extends BaseTest {
     public void testBuildPipelineWithParameters() {
         final String name = pipelineName();
 
-        List<String> checkNameAndDescriptionParametersBuild = new HomePage(getDriver())
+        final List<String> checkNameAndDescriptionParametersBuild = new HomePage(getDriver())
                 .clickNewItem()
                 .setProjectName(name)
                 .setProjectTypePipeline()
@@ -656,7 +652,7 @@ public class _PipelineTest extends BaseTest {
     public void testCheckScheduledBuildInBuildHistory() {
         final String name = pipelineName();
 
-        List<String> checkBuildHistoryByName = new HomePage(getDriver())
+        final List<String> checkBuildHistoryByName = new HomePage(getDriver())
                 .clickNewItem()
                 .setProjectName(name)
                 .setProjectTypePipeline()
@@ -673,44 +669,44 @@ public class _PipelineTest extends BaseTest {
     }
 
     @Test
-    public void testPipelineCheckDiscardOld30builds() throws InterruptedException {
-        ProjectPage projectPage = new ProjectPage(getDriver());
-        List<Integer> expectedBuildNumbers = IntStream.range(2, 32).map(i -> 32 - i + 2 - 1).boxed().collect(Collectors.toList());
+    public void testPipelineCheckDiscardOld30builds() {
 
-        new HomePage(getDriver())
+        final List<Integer> checkingDisplayLast30Builds =  new HomePage(getDriver())
                 .clickNewItem()
                 .setProjectName(namePipeline)
                 .setProjectTypePipeline()
                 .clickOkAndGoToConfig()
-                .clickCheckboxDiscardOldBuilds()
+                .clickCheckBoxDiscardOldBuilds()
                 .saveConfigAndGoToProject()
                 .clickMultipleTimesBuildButton(31)
                 .waitForBuildNumber(31)
-                .refreshPage();
+                .refreshPage()
+                .getNumbersBuildsList();
 
-        Assert.assertEquals(projectPage.getBuildsRowList().size(), 30);
-        Assert.assertEquals(projectPage.getNumbersBuildsList(), expectedBuildNumbers);
+        List<Integer> expectedLast30BuildsNumbers = IntStream.range(2, 32).map(i -> 32 - i + 2 - 1).boxed()
+                .collect(Collectors.toList());
+
+        Assert.assertEquals(checkingDisplayLast30Builds, expectedLast30BuildsNumbers);
     }
 
     @Ignore
     @Test(dependsOnMethods = "testPipelineCheckDiscardOld30builds")
     public void testPipelineCheckDiscardOld3builds() {
-        ProjectPage projectPage = new ProjectPage(getDriver());
-        Integer[] expectedBuildNumbers = {32, 31, 30};
 
-        projectPage
+       final List<Integer> checkingDisplayLast3Builds = new HomePage(getDriver())
                 .clickDashboardButton()
                 .clickMyView()
                 .moveToElement(namePipeline)
-                .selectOptionInMenuSelector("Configure")
-                .fillDiscardOldItems("3", "1")
+                .clickMenuSelector()
+                .clickInMenuSelectorConfigure()
+                .enteringParametersToDisplayLatestBuilds("3", "1")
                 .saveConfigAndGoToProject()
                 .clickBuildButton()
                 .waitForBuildNumber(32)
-                .refreshPage();
+                .refreshPage()
+                .getNumbersBuildsList();
 
-        Assert.assertEquals(projectPage.getBuildsRowList().size(), 3);
-        Assert.assertEquals(projectPage.getNumbersBuildsList(), Arrays.asList(expectedBuildNumbers));
+        Assert.assertEquals(checkingDisplayLast3Builds, List.of(32, 31, 30));
     }
 
     @Test
